# heat_pipe_BEPU

./: .coverage  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  example_config.json  example_config_modified.json  gitignore  heat_pipe_demo_notebook.ipynb  mkdocs.yml  pre-commit-config.yaml  pyproject.toml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  FLUIDS.md  IO_AND_CONFIG.md  MODELS.md  NOTEBOOK.md  PLOTTING.md  QUICKSTART.md  README.md  ROADMAP.md  UNITS.md  UQ.md  VALIDATION.md
heatpipe/: fluids.py  io.py  models.py  plotting.py  uq.py  validation.py
heatpipe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
htpipe/: __init__.py  plotting.py  uq.py
tests/: conftest.py  test_fluids.py  test_models.py  test_uq.py  test_validation_cases.py
